[dependencies]
# reqwest-middleware
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest_cookie_store = "0.3.0"
# serde
serde = { version = "1.0.137",features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8"
# tokio
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.9"
image = "0.24.2"
rusttype = "0.9.2"
imageproc = "0.23.0"
utf8_slice = "1.0.0"
text-to-png = "0.1.1"
textwrap = "0.15"
id3 = "1.2.0"
symphonia = "0.5.1"
audio-video-metadata = "0.1.7"
regex = "1.6.0"
rust-pinyin = "0.1.1"
once_cell = "1.13.0"


# 添加arm交叉编译时不使用openssl 更换为rustls-tls
[target.'cfg(any(all(target_arch="aarch64", target_vendor="unknown", target_os="linux"), target_env="musl"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json","cookies", "rustls-tls"] }

[target.'cfg(not(any(all(target_arch="aarch64", target_vendor="unknown", target_os="linux"), target_env="musl")))'.dependencies]
reqwest = { version = "0.11", features = ["cookies","json"] }